--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
     </header>
     <main>
-        <section>
+        <section id="geral">
             <article>
                 <div id="box1">
                     <p>
